# coppeliasim_run

./: CMakeLists.txt  README.md  package.xml
launch/: mm_scene.launch  test_world.launch  ur_scene.launch
src/: start_coppeliasim.cpp
worlds/: .test_world.wbproj
