<?xml version="2.0"?>
<package>
  <name>webots_run</name>
  <version>0.0.0</version>
  <description>
	Starts the <a href="http://www.cyberbotics.com">Webots</a> Simulator using a system() call, so Webots can be run directly from a roslaunch file.
	The Webots world file is specified as an argument in the launch file.

	Based on webots_run from kaist_webots package. 
  </description>

  <maintainer email="mmattamala@ing.uchile.cl">Matias Mattamala</maintainer>
  <author>David Butterworth</author>

  <!-- License -->
  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
